--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container mx-auto p-4 md:p-8 max-w-4xl">
 
         <header class="text-center mb-10">
-            <img src="https://imgur.com/a/OtbxYVm" alt="Blason Rugby Club Plabennec" class="mx-auto mb-4 w-32 md:w-40">
+            <img src="blason plabennec.png" alt="Blason Rugby Club Plabennec" class="mx-auto mb-4 w-32 md:w-40">
 
             <h1 class="text-4xl md:text-5xl font-bold text-rose-900">
                 <span class="text-yellow-500">Rugby</span>
