--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
         <header class="text-center mb-10">
             <img src="blason plabennec.png" alt="Blason Rugby Club Plabennec" class="mx-auto mb-4 w-32 md:w-40">
-
             <h1 class="text-4xl md:text-5xl font-bold text-rose-900">
                 <span class="text-yellow-500">Rugby</span>
                 <span class="text-black">Club</span>
@@ -63,7 +62,7 @@
             </div>
         </section>
 
-        <section id="details" class="print-break-before">
+        <section id="details">
              <div class="bg-white p-6 rounded-lg shadow-md mb-8">
                 <h2 class="text-2xl font-bold text-rose-900 mb-4">Soutenez Votre Club : Devenez Donateur !</h2>
                 <p class="text-stone-700 mb-4">Cette année, en choisissant l'option "Licence Donateur", vous faites un don qui vous donne droit à une <strong class="font-semibold">déduction fiscale de 66%</strong> du montant du don. Votre générosité nous permet d'acquérir du matériel essentiel (sacs de placage, ballons...), de financer les déplacements et les activités pour nos jeunes.</p>
