--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
 
     <div class="container mx-auto p-4 md:p-8 max-w-4xl">
 
-        <header class="text-center mb-10">
+        <header class="flex justify-between items-center mb-10">
             <img src="blason plabennec.png" alt="Blason Rugby Club Plabennec" class="mx-auto mb-4 w-32 md:w-40">
-            <h1 class="text-4xl md:text-5xl font-bold text-rose-900">
-                <span class="text-yellow-500">Rugby</span>
-                <span class="text-black">Club</span>
-                <span class="text-red-600">Plabennec</span>
-            </h1>
-            <p class="text-xl text-stone-600 mt-2">Rejoignez l'Aventure de Votre Club !</p>
+
+            <div class="text-right">
+                <h1 class="text-3xl md:text-4xl font-bold text-rose-900 leading-tight">
+                    <span class="text-yellow-500">Rugby</span>
+                    <span class="text-black">Club</span>
+                    <span class="text-red-600">Plabennec</span>
+                </h1>
+                <p class="text-lg text-stone-600 mt-1">Rejoignez l'Aventure de Votre Club !</p>
+            </div>
         </header>
 
         <section id="intro" class="bg-white p-6 rounded-lg shadow-md mb-8">
@@ -58,7 +61,7 @@
             <div class="space-y-4 text-stone-700">
                 <p>Bonjour à toutes et à tous,</p>
                 <p>Une nouvelle saison passionnante s'apprête à démarrer, et comme chaque année, <strong class="font-semibold">nous avons besoin de vous !</strong> Au cœur de notre club, ce sont nos licenciés qui font notre force, de l'école de rugby jusqu'aux seniors, en passant par le pôle jeunes.</p>
-                <p>Après une année sportive riche en émotions, nous abordons cette saison avec de grandes ambitions. Nous sommes fiers d'annoncer la création d'une <strong class="font-semibold">"Académie"</strong> dédiée aux joueurs de M14 aux Juniors les plus motivés, un <strong class="font-semibold">renforcement de la formation continue de nos éducateurs</strong>, et bien d'autres projets passionnants !</p>
+                <p>Après une année sportive riche en émotions, nous abordons cette saison avec de grandes ambitions. Nous sommes fières d'annoncer la création d'une <strong class="font-semibold">"Académie"</strong> dédiée aux joueurs de M14 aux Juniors les plus motivés, un <strong class="font-semibold">renforcement de la formation continue de nos éducateurs</strong>, et bien d'autres projets passionnants !</p>
             </div>
         </section>
 
@@ -69,7 +72,7 @@
                 <p class="text-stone-700">En signe de reconnaissance, le nom des donateurs sera <strong class="font-semibold">gravé sur une plaque</strong> sur notre terrain principal. C'est un moyen concret de soutenir le club au-delà de la licence standard.</p>
             </div>
 
-            <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+            <div class="bg-white p-6 rounded-lg shadow-md mb-8 print-break-before">
                 <h2 class="text-2xl font-bold text-rose-900 mb-4">Grille Tarifaire Complète 2024-2025</h2>
                 <div class="overflow-x-auto">
                     <table class="w-full text-left border-collapse">
