--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
         <header class="flex justify-between items-center mb-10">
             <img src="blason plabennec.png" alt="Blason Rugby Club Plabennec" class="mx-auto mb-4 w-32 md:w-40">
-
             <div class="text-right">
                 <h1 class="text-3xl md:text-4xl font-bold text-rose-900 leading-tight">
                     <span class="text-yellow-500">Rugby</span>
@@ -61,7 +60,7 @@
             <div class="space-y-4 text-stone-700">
                 <p>Bonjour à toutes et à tous,</p>
                 <p>Une nouvelle saison passionnante s'apprête à démarrer, et comme chaque année, <strong class="font-semibold">nous avons besoin de vous !</strong> Au cœur de notre club, ce sont nos licenciés qui font notre force, de l'école de rugby jusqu'aux seniors, en passant par le pôle jeunes.</p>
-                <p>Après une année sportive riche en émotions, nous abordons cette saison avec de grandes ambitions. Nous sommes fières d'annoncer la création d'une <strong class="font-semibold">"Académie"</strong> dédiée aux joueurs de M14 aux Juniors les plus motivés, un <strong class="font-semibold">renforcement de la formation continue de nos éducateurs</strong>, et bien d'autres projets passionnants !</p>
+                <p>Après une année sportive riche en émotions, nous abordons cette saison avec de grandes ambitions. Nous sommes fiers d'annoncer la création d'une <strong class="font-semibold">"Académie"</strong> dédiée aux joueurs de M14 aux Juniors les plus motivés, un <strong class="font-semibold">renforcement de la formation continue de nos éducateurs</strong>, et bien d'autres projets passionnants !</p>
             </div>
         </section>
 
@@ -69,7 +68,7 @@
              <div class="bg-white p-6 rounded-lg shadow-md mb-8">
                 <h2 class="text-2xl font-bold text-rose-900 mb-4">Soutenez Votre Club : Devenez Donateur !</h2>
                 <p class="text-stone-700 mb-4">Cette année, en choisissant l'option "Licence Donateur", vous faites un don qui vous donne droit à une <strong class="font-semibold">déduction fiscale de 66%</strong> du montant du don. Votre générosité nous permet d'acquérir du matériel essentiel (sacs de placage, ballons...), de financer les déplacements et les activités pour nos jeunes.</p>
-                <p class="text-stone-700">En signe de reconnaissance, le nom des donateurs sera <strong class="font-semibold">gravé sur une plaque</strong> sur notre terrain principal. C'est un moyen concret de soutenir le club au-delà de la licence standard.</p>
+                <p class="text-stone-700">En signe de reconnaissance, le nom des donateurs sera <strong class="font-semibold">gravé sur une plaque</strong> sur notre terrain principal. C'est un moyen concret de soutenir le club au-delà de la licence standard. Mais votre engagement peut prendre d'autres formes tout aussi précieuses ! Un autre moyen essentiel de faire vivre le club est, bien sûr, de devenir bénévole et de participer activement aux nombreuses activités que nous proposons. Chaque coup de main compte et nous permet d'aller encore plus loin ensemble !</p>
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow-md mb-8 print-break-before">
